examples/syntaxErrors/symbolRedefinitionError.lcp
A = ()

main : A
main = ()
main = ()

f : A
f = ()

main = ()
